tdf#71271 - add code names regardless of VBA compatibility mode

During the save process of a document, save code names of calc sheets
regardless of the VBA compatibility mode. Loading of documents with
changed code names already work without checking the VBA mode.

Change-Id: Ieb5297ac3b671fd39a200c34409ba2ffdad4e1f7